<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
        android:gravity="center_vertical">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:id="@id/row01" android:showDividers="middle">
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/book_name"
                android:id="@id/name_field_label" android:layout_weight="0.3" android:gravity="center_horizontal"
                android:textStyle="bold" android:layout_margin="7dp"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/book_name_fill_text"
                android:id="@id/address_field" android:layout_weight="0.7" android:layout_margin="7dp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_alignLeft="@id/row01" android:layout_below="@id/row01"
            android:id="@id/row02" android:showDividers="middle" android:padding="7dp">
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:id="@id/date_field_label" android:layout_weight="0.3" android:gravity="center_horizontal"
                android:textStyle="bold"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/author_name_fill_text"
                android:id="@id/address_field" android:layout_weight="0.7"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_alignLeft="@id/row01" android:layout_below="@id/row02"
            android:id="@id/row03" android:showDividers="middle" android:padding="7dp">
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/lecture"
                android:id="@id/address_field_label" android:layout_weight="0.3" android:gravity="center_horizontal"
                android:textStyle="bold"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/lecture_name_fill_text"
                android:id="@id/address_field" android:layout_weight="0.7" android:clickable="true"
                android:editable="true"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_alignLeft="@id/row01" android:layout_below="@id/row03"
            android:id="@id/row04"  android:showDividers="none" android:padding="7dp">
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@id/address_field_label" android:enabled="false" android:visibility="visible"
                android:layout_weight="0.3" android:text="@string/lender" android:textStyle="bold"
                android:autoText="true" android:gravity="center_horizontal"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView1" android:layout_weight="0.7" android:visibility="invisible"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_alignLeft="@id/row01" android:layout_below="@id/row04"
            android:id="@id/row05" android:showDividers="middle" android:padding="7dp">
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/due_date"
                android:id="@id/date_field_label" android:layout_weight="0.3" android:gravity="center_horizontal"
                android:textStyle="bold"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/date_fill_text"
                android:id="@id/date_field" android:layout_weight="0.7"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_alignLeft="@id/row01" android:layout_below="@id/row05"
            android:id="@id/row06" android:showDividers="middle" android:padding="7dp">
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:id="@id/address_field_label" android:layout_weight="0.3" android:gravity="center_horizontal"
                android:textStyle="bold"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/lender_name_fill_text"
                android:id="@id/address_field" android:layout_weight="0.7" android:clickable="true"
                android:editable="true"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_alignLeft="@id/row01" android:layout_below="@id/row06"
            android:id="@id/row07" android:showDividers="middle" android:padding="7dp">
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:id="@id/address_field_label" android:layout_weight="0.3" android:gravity="center_horizontal"
                android:textStyle="bold"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/address_fill_text"
                android:id="@id/address_field" android:layout_weight="0.7" android:clickable="true"
                android:editable="true"/>
    </LinearLayout>
</RelativeLayout>