<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
        android:gravity="fill_horizontal|center_vertical" android:padding="@dimen/activity_horizontal_margin">
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lectures"
            android:id="@id/lecture_btn" android:layout_gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin"
            />
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/homework"
            android:id="@id/homework_btn" android:layout_gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exams"
            android:id="@id/exams_btn" android:layout_margin="@dimen/activity_horizontal_margin"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/books"
            android:id="@id/books_btn" android:layout_margin="@dimen/activity_horizontal_margin"
            />
</LinearLayout>